--- a/wp-content/themes/municipio-nsr/assets/source/sass/config/_colors.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/config/_colors.scss
@@ -8,7 +8,7 @@ $palette-primary-white: #fff;
 $palette-primary-white-opacity: rgba(255,255,255,0.9);
 
 /* Greys */
-$palette-primary-grey: #f6f6f6;
+$palette-primary-grey: #fafafa;
 $palette-primary-grey-input:#e6e6e6;
 
 $palette-primary-darkgrey: #393939;
