--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
@@ -85,9 +85,9 @@
 
 .searchbuttons {
     position: absolute;
-    top: 75px;
+    top: 60px;
     left: 0px;
-    @media (min-width: 451px) {
+    @media (min-width: 560px) {
         display:none;
     }
     .infoSearchTxt {
@@ -108,6 +108,7 @@
 }
 
 .tooltip-info {
+    display:none;
 
     width: 259px;
     min-height: 117px;
