--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -956,7 +956,7 @@ input[type=text]:focus.invalid {
         top: 0px !important;
         left: 0px !important;
         padding-right:10px;
-        content: '\f1b8' !important;
+        content: '\e863' !important;
         font-size: 16px;
         align-items: center;
     }
@@ -969,7 +969,7 @@ input[type=text]:focus.invalid {
         content: 'location_on' !important;
     }*/
     .fraktion-icon-avc:before {
-        font-family: 'FontAwesome';
+        font-family: 'Material Icons';
 
     }
     .exnfodispl:before {
