--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -1341,7 +1341,9 @@ tr {
 .meta-fraktion div {
     display: inline-block;
 }
-
+.no-result {
+    padding: 15px 15px 30px 15px;
+}
 @media (max-width: 680px) {
     .mobHide {
         display:none;
