--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -877,7 +877,7 @@ input[type=text]:focus.invalid {
         max-width:100%;
         width:100%;
         .fpTopic {
-            font-weight: 600;
+            font-weight: 400;
             font-size: 1.4rem;
         }
         .align-right {
@@ -1296,7 +1296,7 @@ tr {
         max-width:915px !important;
 
     }
-    .sorterings-guide-table, .search-fetchPlanner {
+    .sorterings-guide-table{
 
         width:100% !important;
         margin-left:-15px !important;
