--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -1362,7 +1362,7 @@ tr {
         position:relative;
     }
     .search-ao-data {
-
+        min-height:30px;
         padding: 130px 30px 30px 30px;
         li {
             list-style: disc !important;
