--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -1393,7 +1393,20 @@ tr {
             padding-left:20px;
             cursor:pointer;
             text-align:center;
-
+            &.nsr-origamiLoader {
+                background: url(/wp-content/themes/municipio-nsr/assets/dist/img/loader.svg);
+                background-repeat: no-repeat;
+                display: block;
+                width: 60px;
+                height: 60px;
+                background-size: 47px;
+                background-position-y: -4px;
+                color: #fff!important;
+                font-size: 15px;
+                background-color: white;
+                background-position-x: 12px;
+                padding-top: 6px;
+            }
             &.active {
                 font-weight: 900;
             }
