Search display search result count

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -1497,65 +1497,91 @@ tr {
         }
     }
 }
+.hero-search {
+    .searchMenu {
+        display:none;
+    }
+}
 
-#main-content .searchNSR {
-    .searchDesignation {
-        display:none !important;
+#main-content {
+    .a-o {
+        display:none;
     }
-    height:300px;
-    margin: 0 !important;
-    background-color: $defaultGreen !important;
-    h2 {
-        margin-top:0px !important;
-        color:#d6e8ea;
-        padding-left:30px;
-        padding-top:35px;
-        padding-bottom:30px;
-    }
-    form {
-        padding-left: 20px;
-        margin-left:11px;
-    }
-    .container .row {
+
+    .searchNSR {
+        .searchDesignation {
+            display:none !important;
+        }
+        height:332px;
         margin: 0 !important;
-        .col.s12 {
-            width:95%;
+        background-color: $defaultGreen !important;
+        h2 {
+            margin-top:0px !important;
+            color:#d6e8ea;
+            padding-left:30px;
+            padding-top:35px;
+            padding-bottom:30px;
         }
-    }
-    .search-button {
-        right: 0px;
-    }
-    input[type=search] {
+        form {
+            padding-left: 20px;
+            margin-left:11px;
+        }
+        .container .row {
+            margin: 0 !important;
+            .col.s12 {
+                width:95%;
+            }
+        }
+        .search-button {
+            right: 0px;
+        }
+        input[type=search] {
 
-        padding-left:68px !important;
-        width:80% !important;
-        @media (max-width: 511px) {
-            width:65% !important;
+            padding-left:68px !important;
+            width:80% !important;
+            @media (max-width: 511px) {
+                width:65% !important;
+            }
+            @media (min-width: 992px) {
+                height:28px;
+            }
         }
-        @media (min-width: 992px) {
-            height:28px;
+        .searchWrapper {
+            width:98%;
         }
-    }
-    .searchWrapper {
-        width:98%;
-    }
-    .searchTooltip {
-        color:#d6e8ea;
-        padding-top: 20px;
-        font-size: 14px;
-    }
-    @media (max-width: 559px) {
         .searchTooltip {
-            display:none;
+            color:#d6e8ea;
+            padding-top: 20px;
+            font-size: 14px;
+        }
+        @media (max-width: 559px) {
+            .searchTooltip {
+                display:none;
+            }
+        }
+        .prefix {
+            padding-left:6px;
+        }
+        .nsr-origamiLoader {
+            background-position-x: -4px;
+        }
+
+        .search-nav {
+            width:100%;
+            position: absolute;
+            z-index: 999;
+            bottom: 0px;
+            width: 100%;
+            margin: 0;
+
+            li{
+                margin: 0px;
+                border:none;
+                width:50%;
+                border-radius: unset;
+            }
         }
     }
-    .prefix {
-        padding-left:6px;
-    }
-    .nsr-origamiLoader {
-        background-position-x: -4px;
-    }
-    background-position-x: -5px;
 }
 
 
