--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -159,4 +159,7 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
         }
     }
 
+    .search .page-title {
+        display:none;
+    }
 }
