--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -1673,8 +1673,10 @@ tr {
     }
 
 }
-.search-nav li span {
-    display:none !important;
+@media (max-width: 605px) {
+    .search-nav li span {
+        display: none;
+    }
 }
 @media (max-width: 1005px) {
 
