--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_hero.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_hero.scss
@@ -2,7 +2,8 @@
 .heroWrapper {
     height: 400px;
     z-index: 997;
-
+    margin-top:-1px;
+    background-color: $palette-primary-green;
     span.designation {
         display: none;
     }
